--- a/src/css/ListProduct.css
+++ b/src/css/ListProduct.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: center;
   width: 65%;
-  background-color: cadetblue;
-  border-radius: 15px;
+  background: whitesmoke;
+  border-radius: 30px;
+  box-shadow: 0 0 2em #505959;
+  padding: 30px;
 }
