--- a/src/css/Search.css
+++ b/src/css/Search.css
@@ -1,9 +1,11 @@
 .search {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 65%;
-  background-color: cadetblue;
-  border-radius: 15px;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+width: 65%;
+background: whitesmoke;
+border-radius: 30px;
+box-shadow: 0 0 2em #505959;
+padding: 30px;
 }
