--- a/src/css/Detail.css
+++ b/src/css/Detail.css
@@ -10,18 +10,31 @@
 .detailIn {
   padding: 12px;
   background: whitesmoke;
-  width: 56%;
+  width: 81%;
   border-radius: 30px;
   box-shadow: 0 0 2em #505959;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+}
+span {
+  font-size: 25px;
+  font-weight: bold;
+  color: blue;
+}
+.tag {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 980px) {
-    .detail {
-      align-items: start;
-      width: 100%;
-      padding: 0px;
-    }
-    .detailIn {
-      width: 100%;
-    }
+  .detail {
+    align-items: start;
+    width: 100%;
+    padding: 0px;
   }
+  .detailIn {
+    width: 100%;
+  }
+}
